# tiny-local

./: .gitignore  README.md  package.json  tsconfig.json  vite.config.ts  wrangler.toml
.github/workflows/: release.yml
rust/: Cargo.toml  README.md
rust/src/: avif.rs  c_compat.rs  errors.rs  exif.rs  jpeg.rs  lib.rs  png.rs  utils.rs  webp.rs
scripts/: build.sh  clang-wasi-wrapper.sh  dev.mjs  optimize-wasm.sh  wasm-build.sh
web/: i18n.ts  index.html  main.ts  styles.css  ui.ts  vite-env.d.ts  worker.ts
web/pwa/: manifest.json  service-worker.js
